--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -69,10 +69,11 @@ nav ul {
 
 nav ul li a {
   display: block;
-  font-size: 1.5rem;
+
   text-decoration: none;
   padding: 0.75rem;
   color: rgb(76, 129, 22);
+  white-space: nowrap;
 }
 
 nav a:hover {
@@ -87,10 +88,7 @@ main {
   margin-bottom: 20px;
 }
 .gallery {
-  padding-left: 10px;
-}
-main h3 {
-  padding-left: 10px;
+  margin-left: 10px;
 }
 
 .logo,
@@ -109,8 +107,10 @@ p {
   padding-left: 10px;
 }
 .gallery-container {
-  display: block;
+  display: grid;
   text-align: center;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 picture {
   margin-bottom: 10px;
@@ -118,9 +118,7 @@ picture {
 .gallery-container img {
   width: 100%;
 }
-picture:hover {
-  box-shadow: 5px 10px 18px #888888;
-}
+
 .gallery-container p {
   display: none;
 }
